--- a/Development/Device.xcodeproj/xcshareddata/xcschemes/DeviceTest.xcscheme
+++ b/Development/Device.xcodeproj/xcshareddata/xcschemes/DeviceTest.xcscheme
@@ -74,7 +74,7 @@
       </BuildableProductRunnable>
    </ProfileAction>
    <AnalyzeAction
-      buildConfiguration = "Release">
+      buildConfiguration = "Debug">
    </AnalyzeAction>
    <ArchiveAction
       buildConfiguration = "Release"
