--- a/Development/DeviceTest-Info.plist
+++ b/Development/DeviceTest-Info.plist
@@ -4,5 +4,7 @@
 <dict>
 	<key>ITSAppUsesNonExemptEncryption</key>
 	<false/>
+	<key>CBBundleDisplayName</key>
+	<string>Device Information Tool</string>
 </dict>
 </plist>
