--- a/Development/Device.xcodeproj/xcshareddata/xcschemes/DeviceWatchTest Watch App.xcscheme
+++ b/Development/Device.xcodeproj/xcshareddata/xcschemes/DeviceWatchTest Watch App.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "1600"
+   LastUpgradeVersion = "1540"
    version = "1.7">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -18,7 +18,7 @@
                BlueprintIdentifier = "B5F033FE2BABA93500CA6396"
                BuildableName = "DeviceTest Watch App.app"
                BlueprintName = "DeviceTest Watch App"
-               ReferencedContainer = "container:Device Information Tool.xcodeproj">
+               ReferencedContainer = "container:Device.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
          <BuildActionEntry
@@ -32,7 +32,7 @@
                BlueprintIdentifier = "B5DD79B22BC94C8800457681"
                BuildableName = "Device Information Tool.app"
                BlueprintName = "Device Information Tool"
-               ReferencedContainer = "container:Device Information Tool.xcodeproj">
+               ReferencedContainer = "container:Device.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -61,7 +61,7 @@
             BlueprintIdentifier = "B5F033FE2BABA93500CA6396"
             BuildableName = "DeviceTest Watch App.app"
             BlueprintName = "DeviceTest Watch App"
-            ReferencedContainer = "container:Device Information Tool.xcodeproj">
+            ReferencedContainer = "container:Device.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -78,7 +78,7 @@
             BlueprintIdentifier = "B5F033FE2BABA93500CA6396"
             BuildableName = "DeviceTest Watch App.app"
             BlueprintName = "DeviceTest Watch App"
-            ReferencedContainer = "container:Device Information Tool.xcodeproj">
+            ReferencedContainer = "container:Device.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
