--- a/Development/Device.xcodeproj/xcshareddata/xcschemes/DeviceWatchTest Watch App.xcscheme
+++ b/Development/Device.xcodeproj/xcshareddata/xcschemes/DeviceWatchTest Watch App.xcscheme
@@ -30,8 +30,8 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "B5DD79B22BC94C8800457681"
-               BuildableName = "Device Information Tool.app"
-               BlueprintName = "Device Information Tool"
+               BuildableName = "Device Info.app"
+               BlueprintName = "Device Info"
                ReferencedContainer = "container:Device.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
